fix(header): fix header flicker issue

--- a/style.css
+++ b/style.css
@@ -117,13 +117,13 @@ a {
 .collapsible__content {
   max-height: 0;
   overflow: hidden;
-  opacity: 0;
+  display: none;
   transition: all 0.3s;
 }
 
 .collapsible--expanded .collapsible__content {
   max-height: 100vh;
-  opacity: 1;
+  display: block;
 }
 
 .nav__item {
